index och contact desktopo layout klar, lagt till några extra klasser för att ta bort redundant kod

--- a/Slutprojekt/site/Contact.html
+++ b/Slutprojekt/site/Contact.html
@@ -13,11 +13,12 @@
 
 <body>
     <div class="wrapper wrapp-C">
-        <div class="frontbox f-contact"></div>
+        <div class="frontbox f-contact mobileonly"></div>
 
         <header>
             <i class="material-icons" id="menubutton" onclick="menu()">menu</i>
             <div class="menubox">
+                    <div class="logo deskonly"></div>
                 <ul>
                         <li><a href="index.html" class="Text">Home</a></li>
                         <div class="seperator"></div>
@@ -32,13 +33,15 @@
 
         <div class="titlebox">Contact</div>
         
+        <div class="seperator big-sep c-sep1 deskonly"></div>
         <p class="mediumtext email-text Text">If you have any questions or wish to speak to us please message us at:</p>
         <div class="centerbox email"><p class="semiboldsmall Text">Not.a.real.email@gmail.com</p></div>
+        <div class="seperator big-sep c-sep2 deskonly"></div>
 
         <div class="seperator big-sep c-sep"></div>
         <p class="mediumtext tw-text Text">Please follow our Twitter for future updates:</p>
         <div class="centerbox tw-link"> <a href="" class="twitterlink"></a> </div>
-        
+        <div class="seperator big-sep c-sep3 deskonly"></div>        
 
     </div>
     <script src="Js/main.js"></script>
