--- a/Slutprojekt/site/Projects.html
+++ b/Slutprojekt/site/Projects.html
@@ -45,7 +45,7 @@
 
         <div class="seperator big-sep P-sep"></div>
 
-        <div class="smalltext Text game-desc">Fight and explore through a vast world filled with perculiar characters on your quest to revive the sun. The first game made by ____ studios inspired by the classics.</div>
+        <div class="smalltext Text game-desc">Fight and explore through a vast world filled with perculiar characters on your quest to revive the sun. The first game made by Jackob studios inspired by the classics.</div>
     </div>
     <script src="Js/main.js"></script>
 </body>
