--- a/Slutprojekt/site/Team.html
+++ b/Slutprojekt/site/Team.html
@@ -12,10 +12,11 @@
 <body>
 
     <div class="wrapper wrapp-T">  
-            <div class="frontbox f-team"></div>      
+            <div class="frontbox f-team mobileonly"></div>      
         <header>
             <i class="material-icons" id="menubutton" onclick="menu()">menu</i>
             <div class="menubox">
+                    <div class="logo deskonly"></div>
                 <ul>
                         <li><a href="index.html" class="Text">Home</a></li>
                         <div class="seperator"></div>
@@ -30,11 +31,15 @@
 
         <div class="titlebox">Team</div>
 
+        <div class="seperator big-sep t-sep3 deskonly"></div>
+
         <div class="Profile P-Jk"></div>
         <div class="name Text N-Jk">Jakob Ekberg</div>
         <div class="description Text D-Jk">Lead artist, designer and animator.</div>
 
         <div class="seperator big-sep t-sep1"></div>
+
+        <div class="seperator big-sep t-sep4 deskonly"></div>
 
         <div class="Profile P-Jc"></div>
         <div class="name Text N-Jc">Jacob Sandström</div>
