--- a/Slutprojekt/site/index.html
+++ b/Slutprojekt/site/index.html
@@ -17,6 +17,7 @@
         <header>
             <i class="material-icons" id="menubutton" onclick="menu()">menu</i>
             <div class="menubox">
+                <div class="logo deskonly"></div>
                 <ul>
                     <li><a href="index.html" class="Text">Home</a></li>
                     <div class="seperator"></div>
@@ -32,7 +33,7 @@
         <div class="frontbox f-projects" >
             <div class="collapsebox">
                 <div class="centerbox centertext"><h2>Read more about our different projects that we are working on.</h2></div>
-                <div class="centerbox"><a href="index.html" class="collapselink Text">Read More</a></div>
+                <div class="centerbox"><a href="Projects.html" class="collapselink Text">Read More</a></div>
                 
             </div>
 
@@ -49,7 +50,7 @@
         <div class="frontbox f-team" >
                 <div class="collapsebox">
                         <div class="centerbox centertext"><h2>Find out who is working on our team, and what they do.</h2></div>
-                        <div class="centerbox"><a href="" class="collapselink Text">Read More</a></div>
+                        <div class="centerbox"><a href="Team.html" class="collapselink Text">Read More</a></div>
                         
                     </div>
         </div>
