Photoshoppat bilder, fixat layout på projects, lagt in alla bilder

--- a/Slutprojekt/site/Contact.html
+++ b/Slutprojekt/site/Contact.html
@@ -18,30 +18,32 @@
         <header>
             <i class="material-icons" id="menubutton" onclick="menu()">menu</i>
             <div class="menubox">
-                    <div class="logo deskonly"></div>
+                <div class="logo deskonly"></div>
                 <ul>
-                        <li><a href="index.html" class="Text">Home</a></li>
-                        <div class="seperator"></div>
-                        <li><a href="Projects.html" class="Text">Projects</a></li>
-                        <div class="seperator"></div>
-                        <li><a href="Contact.html" class="Text">Contact</a></li>
-                        <div class="seperator"></div>
-                        <li><a href="Team.html" class="Text">Team</a></li>
+                    <li><a href="index.html" class="Text">Home</a></li>
+                    <div class="seperator"></div>
+                    <li><a href="Projects.html" class="Text">Projects</a></li>
+                    <div class="seperator"></div>
+                    <li><a href="Contact.html" class="Text">Contact</a></li>
+                    <div class="seperator"></div>
+                    <li><a href="Team.html" class="Text">Team</a></li>
                 </ul>
             </div>
         </header>
 
         <div class="titlebox">Contact</div>
-        
+
         <div class="seperator big-sep c-sep1 deskonly"></div>
         <p class="mediumtext email-text Text">If you have any questions or wish to speak to us please message us at:</p>
-        <div class="centerbox email"><p class="semiboldsmall Text">Not.a.real.email@gmail.com</p></div>
+        <div class="centerbox email">
+            <p class="semiboldsmall Text">Not.a.real.email@gmail.com</p>
+        </div>
         <div class="seperator big-sep c-sep2 deskonly"></div>
 
         <div class="seperator big-sep c-sep"></div>
         <p class="mediumtext tw-text Text">Please follow our Twitter for future updates:</p>
         <div class="centerbox tw-link"> <a href="" class="twitterlink"></a> </div>
-        <div class="seperator big-sep c-sep3 deskonly"></div>        
+        <div class="seperator big-sep c-sep3 deskonly"></div>
 
     </div>
     <script src="Js/main.js"></script>
