--- a/Slutprojekt/site/Projects.html
+++ b/Slutprojekt/site/Projects.html
@@ -13,10 +13,11 @@
 
 <body>
     <div class="wrapper wrapp-P">
-            <div class="frontbox f-Projects"></div>
+        <div class="frontbox f-projects mobileonly"></div>
         <header>
             <i class="material-icons" id="menubutton" onclick="menu()">menu</i>
             <div class="menubox">
+                <div class="logo deskonly"></div>
                 <ul>
                     <li><a href="index.html" class="Text">Home</a></li>
                     <div class="seperator"></div>
@@ -31,21 +32,25 @@
 
         <div class="titlebox">Projects</div>
 
-        <div class="trailer"><iframe width="320" height="180" src="https://www.youtube.com/embed/tEo9sqzX1lQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+        <div class="trailer"><div class="centerbox"><div class="trailer-text Text"> TRAILER CURRENTLY IN PROGRESS </div></div></div>
 
-        <div class="picturealbum"> 
+        <div class="picturealbum">
             <button class="leftbutton" onclick="plusDivs(-1)">&#10094;</button>
             <div class="mySlides pic1"></div>
             <div class="mySlides pic2"></div>
             <div class="mySlides pic3"></div>
-            <div class="mySlides pic4"></div>
-          
-            
-            <button class="rightbutton" onclick="plusDivs(1)">&#10095;</button></div>
+
+
+
+            <button class="rightbutton" onclick="plusDivs(1)">&#10095;</button>
+        </div>
 
         <div class="seperator big-sep P-sep"></div>
 
-        <div class="smalltext Text game-desc">Fight and explore through a vast world filled with perculiar characters on your quest to revive the sun. The first game made by Jackob studios inspired by the classics.</div>
+        <div class="smalltext Text game-desc">Fight and explore through a vast world filled with perculiar characters on
+            your quest to revive the sun. The first game made by Jackob studios inspired by classic titles such as the legend of zelda and many many more...</div>
+
+        <div class="seperator big-sep P-sep2 deskonly"></div>
     </div>
     <script src="Js/main.js"></script>
 </body>
