changed divs to semantic html tags, added reviews section, added new font

--- a/Slutprojekt/site/Contact.html
+++ b/Slutprojekt/site/Contact.html
@@ -13,11 +13,10 @@
 
 <body>
     <div class="wrapper wrapp-C">
-        <div class="frontbox f-contact mobileonly"></div>
-
+        <figure class="frontbox f-contact mobileonly"></figure>
         <header>
             <i class="material-icons" id="menubutton" onclick="menu()">menu</i>
-            <div class="menubox">
+            <nav>
                 <div class="logo deskonly"></div>
                 <ul>
                     <li><a href="index.html" class="Text">Home</a></li>
@@ -28,10 +27,10 @@
                     <div class="seperator"></div>
                     <li><a href="Team.html" class="Text">Team</a></li>
                 </ul>
-            </div>
+            </nav>
         </header>
 
-        <div class="titlebox">Contact</div>
+        <figure class="titlebox">Contacts</figure>
 
         <div class="seperator big-sep c-sep1 deskonly"></div>
         <p class="mediumtext email-text Text">If you have any questions or wish to speak to us please message us at:</p>
