--- a/Slutprojekt/site/Team.html
+++ b/Slutprojekt/site/Team.html
@@ -14,10 +14,10 @@
 <body>
 
     <div class="wrapper wrapp-T">
-        <div class="frontbox f-team mobileonly"></div>
+        <figure class="frontbox f-team mobileonly"></figure>
         <header>
             <i class="material-icons" id="menubutton" onclick="menu()">menu</i>
-            <div class="menubox">
+            <nav>
                 <div class="logo deskonly"></div>
                 <ul>
                     <li><a href="index.html" class="Text">Home</a></li>
@@ -28,28 +28,32 @@
                     <div class="seperator"></div>
                     <li><a href="Team.html" class="Text">Team</a></li>
                 </ul>
-            </div>
+            </nav>
         </header>
 
-        <div class="titlebox">Team</div>
+        <figure class="titlebox">Team</figure>
 
         <div class="seperator big-sep t-sep3 deskonly"></div>
 
-        <div class="Profile P-Jk"></div>
-        <div class="name Text N-Jk">Jakob Ekberg</div>
-        <div class="description Text D-Jk">Lead artist, designer and animator.</div>
+        <div class="Profile-pic P-Jk"></div>
+        <h5 class="name Text N-Jk">Jakob Ekberg</h5>
+        <p class="description Text D-Jk">Lead artist, designer and animator.</p>
 
         <div class="seperator big-sep t-sep1"></div>
 
         <div class="seperator big-sep t-sep4 deskonly"></div>
 
-        <div class="Profile P-Jc"></div>
-        <div class="name Text N-Jc">Jacob Sandström</div>
-        <div class="description Text D-Jc">Lead programmer, software developer and AI expert.</div>
+        <div class="Profile-pic P-Jc"></div>
+        <h5 class="name Text N-Jc">Jacob Sandström</h5>
+        <p class="description Text D-Jc">Lead programmer, software developer and AI expert.</p>
 
         <div class="seperator big-sep t-sep2"></div>
 
-        <div class="more Text">More staff to come</div>
+
+        <div class="centerbox more">
+            <p class="more Text">More staff to come</p>
+        </div>
+
 
     </div>
 
