--- a/Slutprojekt/site/index.html
+++ b/Slutprojekt/site/index.html
@@ -13,10 +13,11 @@
 
 <body>
     <div class="wrapper">
-        <div class="frontpic"></div>
+        <figure class="frontpic"></figure>
+
         <header>
             <i class="material-icons" id="menubutton" onclick="menu()">menu</i>
-            <div class="menubox">
+            <nav>
                 <div class="logo deskonly"></div>
                 <ul>
                     <li><a href="index.html" class="Text">Home</a></li>
@@ -27,7 +28,7 @@
                     <div class="seperator"></div>
                     <li><a href="Team.html" class="Text">Team</a></li>
                 </ul>
-            </div>
+            </nav>
         </header>
 
         <div class="frontbox f-projects">
